<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.ImageFragment">

    <ImageView
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/information_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/dark_green"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            android:src="@drawable/info_100"
            app:backgroundTint="@color/dark_green"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:shapeAppearanceOverlay="@style/FabCircle"
            app:tint="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/information_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/card_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/version_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="1.5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/version_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/info_card_version"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/version_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_code_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="1.5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_code_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/info_card_tv_code"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_code_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/connection_status_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="1.5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/connection_status_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/info_card_connection_status"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:id="@+id/connection_status_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="180dp"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/black" />

                <LinearLayout
                    android:id="@+id/language_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/language_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/languageSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:checkMark="?android:attr/listChoiceIndicatorSingle"
                        android:ellipsize="marquee"
                        android:prompt="@string/language_select"
                        android:spinnerMode="dialog" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>